[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Select_map.gd" type="Script" id=2]
[ext_resource path="res://sounds/background.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Select_map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="map1" type="Button" parent="."]
margin_left = 96.0
margin_top = 104.0
margin_right = 151.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="map4" type="Button" parent="."]
margin_left = 488.0
margin_top = 104.0
margin_right = 543.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="map3" type="Button" parent="."]
margin_left = 360.0
margin_top = 104.0
margin_right = 415.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="map2" type="Button" parent="."]
margin_left = 224.0
margin_top = 104.0
margin_right = 279.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="return" type="Button" parent="."]
margin_left = 9.0
margin_top = 11.0
margin_right = 84.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Return"

[node name="Title_map" type="Label" parent="."]
margin_left = 192.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Select map"
align = 1
valign = 1

[node name="backgroundmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.8
autoplay = true

[connection signal="pressed" from="map1" to="." method="_on_map1_pressed"]
[connection signal="pressed" from="map4" to="." method="_on_map4_pressed"]
[connection signal="pressed" from="map3" to="." method="_on_map3_pressed"]
[connection signal="pressed" from="map2" to="." method="_on_map2_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
